--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "googleapis": "^170.1.0",
     "lucide-react": "^0.562.0",
     "next": "16.1.3",
+    "next-auth": "^4.24.13",
     "react": "19.2.3",
     "react-day-picker": "^9.13.0",
     "react-dom": "19.2.3",
